--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
-    "moment": "^2.18.1",
+    "moment": "^2.19.1",
     "numeral": "^2.0.6",
+    "random-int": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-plaid-link": "^0.1.9",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.11",
