--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "swaddle",
   "main": "server.js",
+  "scripts": {
+    "start": "nodemon ./server.js localhost 9000"
+  },
   "dependencies": {
     "axios": "^0.16.2",
     "bcrypt-nodejs": "latest",
@@ -14,6 +17,7 @@
     "moment": "^2.18.1",
     "mongoose": "~4.6.1",
     "morgan": "~1.7.0",
+    "nodemon": "^1.12.1",
     "numeral": "^2.0.6",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
